# pictures

./: pyproject.toml
photo/: models.py  urls.py  views.py
photo/migrations/: 0001_initial.py  0002_reply.py
photo/templates/: detail.html  index.html  result.html
pictures/: settings.py  urls.py
