[tool.poetry]
name = "pictures"
version = "0.1.0"
description = ""
authors = ["rei.h <rei.h@kakaoent.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
django-bootstrap-v5 = "^1.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
